[gd_scene load_steps=13 format=3 uid="uid://cajw68kmspquc"]

[ext_resource type="Script" path="res://Script/key.gd" id="1_qrdgi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hno3a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndljd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbanh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fac5k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yx0vu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0fjhs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4uq1w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmpns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3avif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxkki"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3odal"]

[node name="Key" type="Control"]
z_index = 10
custom_minimum_size = Vector2(80, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 76.0
offset_bottom = 39.0
script = ExtResource("1_qrdgi")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "牙疼"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_hno3a")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ndljd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wbanh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fac5k")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_yx0vu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_0fjhs")
theme_override_styles/hover = SubResource("StyleBoxEmpty_4uq1w")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gmpns")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3avif")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_sxkki")
theme_override_styles/normal = SubResource("StyleBoxEmpty_3odal")

[connection signal="drag_end" from="." to="." method="_on_drag_end"]
[connection signal="drag_start" from="." to="." method="_on_drag_start"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
